Porter correction sur page collapse home et logement

--- a/projet-react-casa/src/components/Collapse/Collapse.scss
+++ b/projet-react-casa/src/components/Collapse/Collapse.scss
@@ -11,7 +11,6 @@
         align-items: center;
         justify-content: space-between;
         font-size: 18px;
-        margin-bottom: 30px;
 
         &::after {
             content: "";
