--- a/projet-react-casa/src/pages/Logement/Logement.scss
+++ b/projet-react-casa/src/pages/Logement/Logement.scss
@@ -115,9 +115,17 @@
  .collapseContent {
    margin-top: 20px;
    display: flex;
+   flex-wrap: wrap;
    justify-content: space-between;
    gap: 60px;
-  
+  .collapseContentchild{
+   width: 45%;
+   overflow-wrap: break-word;
+
+   @media screen and (max-width: 768px) {
+      width: 100%;
+  }
+  }
 
   @media screen and (max-width: 768px) {
        flex-direction: column;
@@ -125,27 +133,4 @@
    }
 
 
-   &__description {
-       width: 60%;
-       overflow-wrap: break-word;
-
-
-       @media screen and (max-width: 768px) {
-           width: 100%;
-       }
-   }
-
-
-   &__equipement {
-       width: 60%;
-
-
-       @media screen and (max-width: 768px) {
-           width: 100%;
-       }
-
-
-   }
 }
-
-
